--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Jogo — Matemática, Educação Financeira, Português & Tempo (1 Robô)</title>
+  <title>Jogo — Matemática, Educação Financeira, Português, Tempo & Ciências (1 Robô)</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <main class="app" role="application" aria-label="Jogo – Matemática, Educação Financeira e Português">
+  <main class="app" role="application" aria-label="Jogo – Matemática, Educação Financeira, Português, Tempo e Ciências">
     <div class="topbar">
       <div class="back-btn-container">
         <button class="mini ghost" id="backBtn" title="Voltar à seleção" aria-label="Voltar à seleção" disabled>⟵ Voltar</button>
@@ -37,6 +37,10 @@ Erros: 0</div>
             <label style="display: flex; align-items: center; gap: 6px; cursor: pointer;">
               <input type="radio" name="spriteType" value="ducklings" id="spriteDucklings" checked>
               <span>🐥 Pintinhos</span>
+            </label>
+            <label style="display: flex; align-items: center; gap: 6px; cursor: pointer;">
+              <input type="radio" name="spriteType" value="bunnies" id="spriteBunnies">
+              <span>🐰 Coelhinhos</span>
             </label>
             <label style="display: flex; align-items: center; gap: 6px; cursor: pointer;">
               <input type="radio" name="spriteType" value="mixed" id="spriteMixed">
